<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">GuildMasterApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_messages">Messages</string>
    <string name="title_menu">Menu</string>
    <string name="title_news">News</string>
    <string name="title_pvp_history">PVP History</string>
    <string name="title_friends">Friends</string>
    <string name="title_guild">Guild</string>
    <string name="title_community">Community</string>
    <string name="title_crafting">Crafting</string>
    <string name="title_my_profile">My Profile</string>
    <string name="title_login">Login</string>
    <string name="title_signup">Sign Up</string>
    <string name="title_about">About</string>
    <string name="backArrow">Back</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="launcher_pic">Launcher</string>
    <string name="transparent_product_logo">Transparent Product Logo</string>
    <string name="toggle_button_overview_label">Overview</string>
    <string name="pvp_button_label">PVP</string>
    <string name="about_button">About</string>
    <string name="log_out_button">Log Out</string>
    <string name="dashboard_background_description">Dashboard background</string>
    <string name="dashboard_navigation_label">DashBoard</string>
    <string name="hello_nwizard">Hello, \nWizard!</string>
    <string name="filter_icon_description">Filter Icon</string>
    <string name="close_btn_description">Close Btn</string>
    <string name="temporary_profile_picture">Temporary Profile Picture</string>
    <string name="crafting_icon_description">crafting icon</string>
    <string name="quest_icon">quest icon</string>
    <string name="learning_icon_description">Learning Icon</string>
    <string name="character_selection">Select Character</string>
    <string name="clear_all">Clear All</string>
    <string name="save_changes">Save Changes</string>
    <string name="overall_pvp_stats_title">Overall Account PVP Stats</string>
    <string name="wins_vs_losses">Wins/Losses</string>
    <string name="rank">Rank</string>
    <string name="rank_points">Rank Points</string>
    <string name="rank_rollovers">Rank rollovers</string>
    <string name="pvp_aggregate">Total PVP Stats</string>
    <string name="pvp_aggregate_win_count">Wins: 6</string>
    <string name="pvp_professions">Professions</string>
    <string name="pvp_professions_wins_count">Wins: 3</string>
    <string name="pvp_ladder">Ranked/Unranked</string>
    <string name="pvp_professions_wins">Wins: 0</string>
    <string name="pvp_professions_losses">Losses: 0</string>
    <string name="pvp_professions_desertions">Desertions: 0</string>
    <string name="pvp_professions_byes">Byes: 0</string>
    <string name="pvp_professions_forfeits">Forfeits: 0</string>
    <string-array name="pvp_spinner_items">
        <item>Professions</item>
        <item>Ranked/Unranked</item>
    </string-array>
    <string-array name="professions_spinner_items">
        <item>Mesmer</item>
        <item>Guardian</item>
        <item>Necromancer</item>
        <item>Ranger</item>
        <item>Elementalist</item>
        <item>Warrior</item>
        <item>Thief</item>
        <item>Engineer</item>
    </string-array>
    <string-array name="ladder_spinner_items" tools:ignore="ExtraTranslation">
        <item>Ranked</item>
        <item>UnRanked</item>
    </string-array>
    <string name="sample_username">User Name</string>
    <string name="sample_email">user@example.com</string>
    <string name="messages_temp_text">This is the Messages fragment</string>
    <string name="news_temp_text">This is the News fragment</string>
    <string name="pvp_history_temp_text">This is the PVP fragment</string>
    <string name="friends_temp_text">This is the Friends fragment</string>
    <string name="guild_temp_text">This is the Guild fragment</string>
    <string name="community_temp_text">This is the Community fragment</string>
    <string name="crafting_temp_text">This is the Crafting fragment</string>
    <string name="my_profile_temp_text">This is the My Profile fragment</string>
    <string name="about_temp_text">This is the About fragment</string>
    <string name="notifications_background">Notifications background image</string>
    <string name="guild_post_replied">Guild post replied</string>
    <string name="august_19th">August 19th</string>
    <string name="notifications_guild_post_example">
        I found out that the wizard class now have increased
        cast speed for Fireball and Meteor, this combo can make massive MDMG
    </string>
    <string name="assassin_class_updates">Assassin class updates</string>
    <string name="august_1st">August 1st</string>
    <string name="notifications_assassin_class_updates_example">
        Assassin class has now decreased cool-down for invisible attack,
        but also decreased invisible skill time, that changed the PVP rank this month
    </string>
    <string name="wizard_legendary_robe">New Wizard Legendary Robe (PVP)</string>
    <string name="july_15th">July 15th</string>
    <string name="notifications_wizard_legendary_robe_example">
        The new Legendary Robe for the Wizard class is one of the best options for
        fire cast wizards, it increases fire attacks by 20%
    </string>
    <string name="warrior_combo_changed">Warrior most used combo changed</string>
    <string name="may_4th">May 4th</string>
    <string name="notifications_warrior_combo_changed_example">
        Warriors now cannot cast Fire Blade and Ice Blade directly,
        cool-down is required in between both attacks when casting in sequence
    </string>
    <string name="player_profile">Profile</string>
    <string name="equipment_comp">Equipment Calculator</string>
    <string name="weapon_comp">Weapon Calculator</string>
    <string name="equip_build_calc">Equipment Build Calculator</string>
    <string name="power_attribute">"Power: "</string>
    <string name="toughness_attribute">"Toughness: "</string>
    <string name="precision_attribute">"Precision: "</string>
    <string name="vitality_attribute">"Vitality: "</string>
    <string name="concentration_attribute">"Concentration: "</string>
    <string name="condition_attribute">"Condition Damage: "</string>
    <string name="expertise_attribute">"Expertise: "</string>
    <string name="ferocity_attribute">"Ferocity: "</string>
    <string name="healing_power_attribute">"Healing Power: "</string>
    <string name="equipment_title">Equipment</string>
    <string name="attributes_title">Attributes</string>
    <string name="shoulder_slot">Shoulder slot</string>
    <string name="equipment_builder_bg">Equipment builder background</string>
    <string name="helm_slot">Helmet slot</string>
    <string name="chest_slot">Chest slot</string>
    <string name="hands_slot">Hands slot</string>
    <string name="legs_slot">Legs slot</string>
    <string name="feet_slot">Feet slot</string>
    <string name="weapon_slot">Weapon slot</string>
    <string name="guild_emblem_image">Emblem</string>
    <string name="guild_members_title">Members</string>
    <string name="guild_discussions_title">Discussions</string>
    <string name="guild_temp_text_1">Can I get some help with…</string>
    <string name="guild_temp_text_2">Looking for group</string>
    <string name="guild_temp_text_3">Crafters needed</string>
    <string name="defense_attr">"Defense: "</string>
    <string name="splashscreen_title">Discover the Power of Your Gear with Our Build Calculator!</string>
    <string name="splashscreen_message">Explore how different armor pieces can transform your attributes.
        Just click on any armor piece, select your desired gear, and instantly see the impact on your stats. Unleash
        your potential and optimize your build for ultimate performance!
    </string>
    <string name="weapon_help_title">Maximize Your Weapon’s Damage with Our Ultimate Build Calculator!</string>
    <string name="weapon_help_message">Discover how different weapons can amplify your damage.
        Simply click on any weapon, choose your preferred build, and instantly see the impact on your stats. Unleash your potential and optimize your build for maximum damage!
    </string>
    <string name="prompt">Touch anywhere to continue…</string>
    <string name="search_equipment">"Search"</string>
    <string name="item_level" tools:ignore="ExtraTranslation">"Level: "</string>
    <string name="level">"Level: "</string>
    <string name="name">Item Name</string>
    <string name="item_attributes">ItemAttributes</string>
    <string name="item_weightclass">Item weightclass</string>
    <string name="slot">Armor slot</string>
    <string name="flags">Flags</string>
    <string name="item_value">1</string>
    <string name="item_description">Description</string>
    <string name="item_defense">Defense:</string>
    <string name="weapon_build_calc">Weapon Build Calculator</string>
    <string name="off_hand">Offhand icon</string>
    <string name="main_hand">Main hand</string>
    <string name="weapon_title">Weapons</string>
    <string name="weapon_strength">"Weapon Strength: "</string>
    <string name="weapon_type">Weapon Type</string>
    <string name="weapon_rarity">Rarity</string>
    <string name="weapon_level">"Required Level: "</string>
    <string name="no_friends_text">No friends found</string>
    <string name="error_loading_friends">Error loading friends</string>
    <string name="error_empty_email">Please enter an email to search</string>
    <string name="profile_background_image">Profile fragment background</string>
    <string name="profile_character_image">Character Image</string>
    <string name="profile_dialog_close_button">Close dialog button</string>
    <string name="profile_equipment_button">Equipment Calculator</string>
    <string name="profile_guild_button">Guild</string>
    <string name="profile_attributes">Attributes</string>
    <string name="profile_backstory_title">Backstory</string>
    <string name="profile_question_1">Question 1</string>
    <string name="profile_answer_1">Answer 1</string>
    <string name="profile_question_2">Question 2</string>
    <string name="profile_answer_2">Answer 2</string>
    <string name="profile_question_3">Question 3</string>
    <string name="profile_answer_3">Answer 3</string>
    <string name="profile_question_4">Question 4</string>
    <string name="profile_answer_4">Answer 4</string>
    <string name="profile_question_5">Question 5</string>
    <string name="profile_answer_5">Answer 5</string>
    <string name="profile_attribute_default_stat">100</string>
    <string name="profile_attribute_power">Power</string>
    <string name="profile_attribute_precision">Precision</string>
    <string name="profile_attribute_toughness">Toughness</string>
    <string name="profile_attribute_vitality">Vitality</string>
    <string name="profile_name_title">Name:</string>
    <string name="profile_race_title">Race:</string>
    <string name="profile_profession_title">Profession:</string>
    <string name="profile_level_title">Level:</string>
    <string name="crafting_title">Crafting Recipes</string>
    <string name="recipe_list_name">Recipe Name</string>
    <string name="ingredient_name">Ingredient name:</string>
    <string name="ingredient_count">Ingredient count:</string>
    <string name="ingredients">Ingredients:</string>
    <string name="close">CLOSE</string>
</resources>