<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_menu"
            android:icon="@drawable/ic_menu_black_24dp"
            android:title="@string/title_menu"/>

    <item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_notifications"/>

    <item
            android:id="@+id/navigation_dashboard"
            android:icon="@drawable/ic_dashboard_black_24dp"
            android:title="@string/title_dashboard"/>

    <item
            android:id="@+id/navigation_messages"
            android:icon="@drawable/ic_message_black_24dp"
            android:title="@string/title_messages"/>

    <item
            android:id="@+id/navigation_my_profile"
            android:icon="@drawable/ic_menu_profile"
            android:title="@string/title_my_profile"/>

</menu>