<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/transparent_logo">

    <Button
            android:id="@+id/backstory_close_button"
            android:contentDescription="@string/profile_dialog_close_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_close_white_24dp"
            android:layout_gravity="end"/>
    <TextView
            android:id="@+id/profile_dialog_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_question_1"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:textStyle="italic"
            android:paddingVertical="12dp"
            android:paddingHorizontal="12dp"/>

    <TextView
            android:id="@+id/profile_dialog_answer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_answer_1"
            android:textSize="12sp"
            android:textColor="@color/shadow_black"/>

</LinearLayout>