<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView
            android:contentDescription="@string/equipment_builder_bg"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/compare_equipment_background"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="fitXY"/>
    <ImageView
            android:id="@+id/back_button"
            android:contentDescription="@string/backArrow"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            app:layout_constraintTop_toBottomOf="@id/equipment_builder_title"
            app:layout_constraintBottom_toTopOf="@id/equipment_build_card"
            app:layout_constraintStart_toStartOf="parent"
            android:src="@drawable/back_arrow"
            android:clickable="true"
            android:focusable="true"/>
    <TextView
            android:id="@+id/equipment_builder_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/equip_build_calc"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/dark_gray"
            android:layout_marginTop="44dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

    <androidx.cardview.widget.CardView
            android:id="@+id/equipment_build_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/equipment_builder_title"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="16dp"
            android:layout_marginBottom="50dp"
            app:cardElevation="4dp"
            app:cardCornerRadius="20dp"
            app:cardBackgroundColor="#E6624A2E" android:layout_marginStart="16dp"
            >
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:layout_weight="1">
                <TextView
                        android:id="@+id/equipment_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="20dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/equipment_helm"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/equipment_title"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintVertical_chainStyle="spread_inside"/>
                <ImageView
                        android:id="@+id/equipment_helm"
                        android:contentDescription="@string/helm_slot"
                        android:layout_width="81dp"
                        android:layout_height="81dp"
                        android:layout_marginBottom="10dp"
                        app:layout_constraintTop_toBottomOf="@id/equipment_title"
                        app:layout_constraintBottom_toTopOf="@id/equipment_shoulders"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:src="@drawable/equipment_helm_icon"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:clickable="true"
                        android:focusable="true"
                />
                <ImageView
                        android:id="@+id/equipment_shoulders"
                        android:contentDescription="@string/shoulder_slot"
                        android:layout_width="81dp"
                        android:layout_height="81dp"
                        android:layout_marginBottom="10dp"
                        app:layout_constraintTop_toBottomOf="@id/equipment_helm"
                        app:layout_constraintBottom_toTopOf="@+id/equipment_chest"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:src="@drawable/equipment_shoulder_icon"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:clickable="true"
                        android:focusable="true"/>
                <ImageView
                        android:id="@+id/equipment_chest"
                        android:contentDescription="@string/chest_slot"
                        android:layout_width="81dp"
                        android:layout_height="81dp"
                        android:layout_marginBottom="10dp"
                        app:layout_constraintTop_toBottomOf="@id/equipment_shoulders"
                        app:layout_constraintBottom_toTopOf="@id/equipment_hands"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:src="@drawable/equipment_chest_icon"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:clickable="true"
                        android:focusable="true"/>
                <ImageView
                        android:id="@+id/equipment_hands"
                        android:contentDescription="@string/hands_slot"
                        android:layout_width="81dp"
                        android:layout_height="81dp"
                        android:layout_marginBottom="10dp"
                        app:layout_constraintTop_toBottomOf="@id/equipment_chest"
                        app:layout_constraintBottom_toTopOf="@id/equipment_legs"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:src="@drawable/equipment_hand_icon"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:clickable="true"
                        android:focusable="true"/>
                <ImageView
                        android:id="@+id/equipment_legs"
                        android:contentDescription="@string/legs_slot"
                        android:layout_width="81dp"
                        android:layout_height="81dp"
                        android:layout_marginBottom="10dp"
                        app:layout_constraintTop_toBottomOf="@id/equipment_hands"
                        app:layout_constraintBottom_toTopOf="@id/equipment_feet"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:src="@drawable/equipment_leg_icon"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:clickable="true"
                        android:focusable="true"/>
                <ImageView
                        android:id="@+id/equipment_feet"
                        android:contentDescription="@string/feet_slot"
                        android:layout_width="81dp"
                        android:layout_height="81dp"
                        android:layout_marginBottom="10dp"
                        app:layout_constraintTop_toBottomOf="@id/equipment_legs"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:src="@drawable/equipment_feet_icon"
                        android:adjustViewBounds="true"
                        android:scaleType="fitCenter"
                        android:clickable="true"
                        android:focusable="true"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
            <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:background="@color/dark_gray"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:padding="20dp"
                    android:layout_weight="2">
                <TextView
                        android:id="@+id/attributes_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/power_attr"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:text="@string/attributes_title"
                        android:textStyle="bold|normal"
                        android:textColor="@color/white"
                        android:textSize="22sp"
                        app:layout_constraintVertical_chainStyle="spread_inside"/>
                <TextView
                        android:id="@+id/power_attr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        app:layout_constraintTop_toBottomOf="@id/attributes_title"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/toughness_attr"
                        android:text="@string/power_attribute"
                        android:textSize="18sp"
                        android:textColor="@color/white"
                        />
                <TextView
                        android:id="@+id/toughness_attr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        app:layout_constraintTop_toBottomOf="@+id/power_attr"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/precision_attr"
                        android:text="@string/toughness_attribute"
                        android:textSize="18sp"
                        android:textColor="@color/white"/>
                <TextView
                        android:id="@+id/precision_attr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        app:layout_constraintTop_toBottomOf="@+id/toughness_attr"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/vitality_attr"
                        android:text="@string/precision_attribute"
                        android:textSize="18sp"
                        android:textColor="@color/white"/>
                <TextView
                        android:id="@+id/vitality_attr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        app:layout_constraintTop_toBottomOf="@id/precision_attr"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/concentration_attr"
                        android:text="@string/vitality_attribute"
                        android:textSize="18sp"
                        android:textColor="@color/white"/>
                <TextView
                        android:id="@+id/concentration_attr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        app:layout_constraintTop_toBottomOf="@+id/vitality_attr"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/condition_attr"
                        android:text="@string/concentration_attribute"
                        android:textSize="18sp"
                        android:textColor="@color/white"/>
                <TextView
                        android:id="@+id/condition_attr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        app:layout_constraintTop_toBottomOf="@+id/concentration_attr"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/expertise_attr"
                        android:text="@string/condition_attribute"
                        android:textSize="18sp"
                        android:textColor="@color/white"/>
                <TextView
                        android:id="@+id/expertise_attr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        app:layout_constraintTop_toBottomOf="@+id/condition_attr"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/ferocity_attr"
                        android:text="@string/expertise_attribute"
                        android:textSize="18sp"
                        android:textColor="@color/white"/>
                <TextView
                        android:id="@+id/ferocity_attr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        app:layout_constraintTop_toBottomOf="@+id/expertise_attr"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toTopOf="@+id/healing_power_attr"
                        android:text="@string/ferocity_attribute"
                        android:textSize="18sp"
                        android:textColor="@color/white"/>
                <TextView
                        android:id="@+id/healing_power_attr"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="end"
                        android:layout_marginBottom="20dp"
                        app:layout_constraintTop_toBottomOf="@+id/ferocity_attr"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:text="@string/healing_power_attribute"
                        android:textSize="18sp"
                        android:textColor="@color/white"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>